style: configure tailwindcss

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,20 +1,9 @@
 {
-  "importOrder": [
-    "<BUILTIN_MODULES>",
-    "<THIRD_PARTY_MODULES>",
-    "",
-    "^@/(.*)$",
-    "^[./]",
-    "",
-    "<TYPES>",
-    "<TYPES>^[./]"
-  ],
-  "plugins": [
-    "prettier-plugin-sort-json",
-    "@ianvs/prettier-plugin-sort-imports"
-  ],
+  "endOfLine": "auto",
+  "importOrder": ["<BUILTIN_MODULES>", "<THIRD_PARTY_MODULES>", "", "^@/(.*)$", "^[./]", "", "<TYPES>", "<TYPES>^[./]"],
+  "plugins": ["prettier-plugin-sort-json", "@ianvs/prettier-plugin-sort-imports"],
   "printWidth": 120,
-  "trailingComma": "es5",
-  "singleQuote": true,
-  "tabWidth": 2
+  "singleQuote": false,
+  "tabWidth": 2,
+  "trailingComma": "es5"
 }
