--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
     ]
   },
   "dependencies": {
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.0",
+    "lucide-react": "0.303.0",
     "next": "14.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind-merge": "2.2.0",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
     "@commitlint/cli": "18.4.3",
@@ -31,6 +36,7 @@
     "@types/react-dom": "18.2.18",
     "@typescript-eslint/eslint-plugin": "6.15.0",
     "@typescript-eslint/parser": "6.15.0",
+    "autoprefixer": "10.4.16",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "9.1.0",
@@ -39,8 +45,10 @@
     "eslint-plugin-prettier": "5.1.0",
     "husky": "8.0.3",
     "lint-staged": "15.2.0",
+    "postcss": "8.4.32",
     "prettier": "3.1.1",
     "prettier-plugin-sort-json": "3.1.0",
+    "tailwindcss": "3.4.0",
     "typescript": "5.3.3"
   }
 }
