--- a/renovate.json
+++ b/renovate.json
@@ -1,13 +1,13 @@
 {
   "extends": ["config:base"],
-  "semanticCommits": true,
-  "stabilityDays": 3,
-  "prCreation": "not-pending",
   "labels": ["type: dependencies"],
   "packageRules": [
     {
       "packageNames": ["node"],
       "enabled": false
     }
-  ]
+  ],
+  "prCreation": "not-pending",
+  "semanticCommits": true,
+  "stabilityDays": 3
 }
